--- a/src/UI/Modal/Modal.module.css
+++ b/src/UI/Modal/Modal.module.css
@@ -76,7 +76,11 @@
    .modal__content {
       border: none;
       top: 0;
-      padding: 10px 0;
+      padding: 50px 0;
+   }
+
+   .modal__btns {
+      gap: 10px;
    }
 }
 
