--- a/src/screen/about/About.module.css
+++ b/src/screen/about/About.module.css
@@ -1,9 +1,6 @@
 .aboutPage {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   align-content: center;
-   flex-direction: column;
+   display: grid;
+   grid-template-columns: repeat(1, 1fr);
    gap: 15px;
    padding-bottom: 60px;
 }
@@ -22,11 +19,8 @@
 }
 
 .listOfLinks {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: flex-start;
-   align-content: center;
+   display: grid;
+   grid-template-rows: repeat(1, 1fr);
    gap: 10px;
    width: 100%;
 }
