--- a/src/screen/choose-test/ChooseTest.module.css
+++ b/src/screen/choose-test/ChooseTest.module.css
@@ -1,9 +1,6 @@
 .cardList {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   align-content: center;
-   flex-direction: column;
+   display: grid;
+   grid-template-columns: repeat(1, 1fr);
    width: 100%;
    gap: 15px;
 }
